src/objects/Apttus_DealMgr__DealManagerSystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Deal Manager System properties</description>
    <fields>
        <fullName>Apttus_CPQOpti__DisplayDimensionsInGuidance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to display rule dimensions in the pricing guidance detail</description>
        <inlineHelpText>Indicator to display rule dimensions in the pricing guidance detail</inlineHelpText>
        <label>Display Dimensions In Guidance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CPQOpti__DisplayNetPricePerUnitInGuidance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to display net price per unit in the pricing guidance detail</description>
        <inlineHelpText>Indicator to display net price per unit in the pricing guidance detail</inlineHelpText>
        <label>Display Net Price Per Unit In Guidance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CPQOpti__HidePercentileRangeInGuidance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether percentile range will be hidden in the pricing guidance display. Either percentile range or price range may be hidden, not both.</description>
        <inlineHelpText>Indicates whether percentile range will be hidden in the pricing guidance display. Either percentile range or price range may be hidden, not both.</inlineHelpText>
        <label>Hide Percentile Range In Guidance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CPQOpti__HidePriceRangeInGuidance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether price range will be hidden in the pricing guidance display. Either percentile range or price range may be hidden, not both.</description>
        <inlineHelpText>Indicates whether price range will be hidden in the pricing guidance display. Either percentile range or price range may be hidden, not both.</inlineHelpText>
        <label>Hide Price Range In Guidance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealGuidanceCallbackClass__c</fullName>
        <description>The deal guidance callback class name. The class should implement the CustomClass.IGuidanceCallback interface.</description>
        <inlineHelpText>The deal guidance callback class name. The class should implement the CustomClass.IGuidanceCallback interface.</inlineHelpText>
        <label>Deal Guidance Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealOptimizerCallbackClass__c</fullName>
        <description>The deal optimizer callback class name. The class should implement the CustomClass.IDealOptimizerCallback interface.</description>
        <inlineHelpText>The deal optimizer callback class name. The class should implement the CustomClass.IDealOptimizerCallback interface.</inlineHelpText>
        <label>Deal Optimizer Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deal Manager System Properties</label>
</CustomObject>